fix(ui): Align commits

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -221,7 +221,7 @@ header {
     display: flex;
     flex-direction: column;
     float: right;
-    text-align: right;
+    align-items: end;
     .sha {
       display: flex;
       align-items: center;
